margin-top overlapping content fix

--- a/css/style.css
+++ b/css/style.css
@@ -1719,7 +1719,7 @@ margin-top: 430px;
   display: none;
 }
 .intro-title-bg {
-  margin-top: 80px;
+  margin-top: 100px;
  /* background: #0c0032;*/
   padding-top: 46px;
   padding-bottom: 0px;
